--- a/index.html
+++ b/index.html
@@ -142,17 +142,18 @@
     <!-- Mensagem de convite personalizada para Catarina -->
     <h1>Olá, Catarina!</h1>
     <p>
-        Não pude deixar de notar o seu sorriso encantador — ilumina até quem mora três prédios ao lado.<br>
-        Sei que deixou para trás a oportunidade de ir para a Suécia, e imagino que tenha sido para viver histórias ainda mais bonitas aqui.
+        Não consigo esquecer o teu sorriso encantador, ainda na esperança de encontrar novamente toda vez que vou a rua.<br>
+        Sei que deixou para trás a oportunidade de ir para a Suécia, mas agora imagino que tenha sido para viver histórias ainda mais bonitas aqui.
     </p>
     <p>
         De vizinhos de prédio a algo mais... aceita este convite?
     </p>
+    <small>Posso estar enganado mas percebi que não tinha namorado, se for o caso de ter, me avise para eu mandar esse repo abaixo :(</small>
     <!-- Botões de resposta -->
     <div class="buttons">
         <!-- Botão de Aceitar: clique para interagir (envia e-mail automático ou redireciona ao WhatsApp). Substitua o endereço de e‑mail ou número de telefone conforme necessário -->
         <a id="yesButton" class="cta" href="#">Sim, quero!</a>
-        <button id="noButton" class="cta no" type="button">Não, obrigado</button>
+        <button id="noButton" class="cta no" type="button">Não, obrigada</button>
     </div>
     <script>
         // Interação para o botão de rejeição ("Não, obrigado"): o botão foge do cursor e diminui até desaparecer
@@ -180,12 +181,12 @@
                 /*
                  * Modifique a linha abaixo para o comportamento desejado:
                  * 1) Para enviar um e‑mail: utilize uma ligação mailto com o seu endereço, assunto e corpo.
-                 *    Exemplo: window.location.href = 'mailto:o.seu.email@example.com?subject=Catarina%20aceitou%20o%20convite&body=Ol%C3%A1,%20aceitei%20o%20convite!';
+                 *    Exemplo: window.location.href = 'mailto:moraesvicttor@gmail.com?subject=Catarina%20aceitou%20o%20convite&body=Ol%C3%A1,%20aceitei%20o%20convite!';
                  * 2) Para abrir uma conversa no WhatsApp: utilize a API wa.me com o número (código internacional sem +) e a mensagem.
                  *    Exemplo: window.location.href = 'https://wa.me/351913580168?text=Ol%C3%A1,%20aceitei%20o%20convite!';
                  * No exemplo abaixo, por padrão usamos um link para WhatsApp com um número fictício. Substitua pelo seu número real.
                  */
-                window.location.href = 'https://wa.me/351913580168?text=Ol%C3%A1,%20aceitei%20o%20convite!';
+                window.location.href = 'https://wa.me/351913580168?text=Ol%C3%A1,%20aceito%20o%20convite!';
             });
         });
     </script>
